# clawd-window

./: .gitignore  CLAUDE.md  README.md
plugin/clawd/: .mcp.json  README.md
plugin/clawd/.claude-plugin/: plugin.json
plugin/clawd/hooks/: hooks.json
plugin/clawd/skills/celebrate/: SKILL.md
plugin/clawd/skills/eat/: SKILL.md
plugin/clawd/skills/happy/: SKILL.md
plugin/clawd/skills/sleep/: SKILL.md
plugin/clawd/skills/status/: SKILL.md
src/: index.html  pet.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_eater.rs  http_api.rs  lib.rs  mood.rs  pet_controller.rs  pet_pack.rs  state.rs  tray.rs  window_tracker.rs
src/packs/: index.json
src/packs/clawd/: manifest.json
src/packs/hsr_bottled_stardust/acheron/: 023.webm  024.webm  115.webm  116.webm  117.webm
src/packs/hsr_bottled_stardust/aglaea/: 014.webm  015.webm  016.webm  017.webm  027.webm  028.webm  029.webm  069.webm  098.webm  110.webm  manifest.json
src/packs/hsr_bottled_stardust/castorice/: 001.webm  002.webm  003.webm  004.webm  005.webm  059.webm  066.webm
src/packs/hsr_bottled_stardust/castorice_sister/: 006.webm  008.webm  067.webm
src/packs/hsr_bottled_stardust/cipher/: 088.webm  092.webm  093.webm  094.webm  095.webm
src/packs/hsr_bottled_stardust/firefly/: 039.webm  052.webm  053.webm
src/packs/hsr_bottled_stardust/hayacine/: 085.webm  086.webm  089.webm  090.webm  091.webm
src/packs/hsr_bottled_stardust/herta/: 104.webm  105.webm
(+67 files in other folders)
